src/objects/LedgerEntry__c.object
<CustomObject>
    <description>General ledger accounting entries enabling standardized revenue and expense tracking for events</description>
    <fields>
        <fullName>AdPlanManaged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents a Ledger Entry that is generated based on Ad Plan calculations,
and is managed by the backend.</description>
        <label>Ad Plan Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyTicketScale__c</fullName>
        <label>Apply Ticket Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RateType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Paid Tickets</fullName>
                </value>
                <value>
                    <fullName>All Drop Count</fullName>
                </value>
                <value>
                    <fullName>Selected Tickets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ArtistAmountRate__c</fullName>
        <label>Artist Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ArtistAmount__c</fullName>
        <label>Artist Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistMax__c</fullName>
        <label>Artist Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistMin__c</fullName>
        <label>Artist Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ArtistRateType__c</fullName>
        <label>Artist Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BaseAmount__c</fullName>
        <label>Base Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSAtFlash__c</fullName>
        <label>COGS at Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSAtForecast__c</fullName>
        <label>COGS At Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COGSAtSellout__c</fullName>
        <label>COGS At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContraAccount__c</fullName>
        <description>This field is true if the ledger entry related GL account has a mapped contra account. Only used for a process builder flow and not displayed on any page layout.</description>
        <formula>IF(NOT(ISBLANK(GLAccount__r.RelatedContra__c)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contra Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContraAmount__c</fullName>
        <label>Contra Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraAtFlash__c</fullName>
        <formula>/* if there are roll up contra at flash values, use that, otherwise, calculate it
   Flash Contra Amount + ((Flash Contra % + Flash 3rd Party %) * Flash Gross Revenue)
 */
if( RollUpCount__c &gt; 0,
	RollUpContraAtFlash__c,
	FlashContraAmount__c * ((  FlashContraPercent__c  *   Flash3rdPartyPercent__c ) *  FlashGrossRevenue__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contra at Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraAtForecast__c</fullName>
        <label>Contra At Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContraPercentAtForecast__c</fullName>
        <label>Contra % At Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContraPercent__c</fullName>
        <label>Contra %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ContraType__c</fullName>
        <label>Contra Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContraatSellout__c</fullName>
        <label>Contra at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFlashFormula__c</fullName>
        <formula>CASE(TEXT(FlashRateType__c),
&quot;Flat&quot;, FlashRateAmount__c,
&quot;Per Drop Count&quot;, FlashRateAmount__c * Event__r.ActualDropCount__c,
&quot;Per Paid Ticket&quot;, FlashRateAmount__c * Event__r.PaidAttendance__c,
&quot;% of Net Gross&quot;, FlashRateAmount__c / 100 * Event__r.SettlementNetGross__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Flash Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentFlash__c</fullName>
        <label>Current Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DefaultCalculationGLAccount__c</fullName>
        <formula>GLAccount__r.DefaultCalculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuplicateGLEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked if there are duplicate entries for the same event and event date combination</description>
        <label>Duplicate GL Entry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndofTourDinner__c</fullName>
        <label>End of Tour Dinner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventAdvertisingSettlementPlan__c</fullName>
        <description>Internal field only used in Apex triggers</description>
        <formula>TEXT(Event__r.AdvertisingSettlementPlan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Advertising Settlement Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Revenues and Expenses</relationshipLabel>
        <relationshipName>LedgerEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventStatusStage__c</fullName>
        <formula>Event__r.StatusStage__c</formula>
        <label>Event Status Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Revenues and Expenses</relationshipLabel>
        <relationshipName>LedgerEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustment__c</fullName>
        <label>Expense Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpenseAdjustmentatSellout__c</fullName>
        <label>Expense Adjustment at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Unique External Id for the Ledger Entry</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinalForecast__c</fullName>
        <label>Final Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flash3rdPartyPercent__c</fullName>
        <label>Flash 3rd Party %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FlashAdjustments__c</fullName>
        <formula>CurrentFlash__c - OriginalFlash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the Ledger Entry applies for Flash Ancillary use</inlineHelpText>
        <label>Flash Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlashCapacityRange__c</fullName>
        <label>Flash Capacity Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlashContraAmount__c</fullName>
        <label>Flash Contra Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashContraPercent__c</fullName>
        <label>Flash Contra %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FlashFilter__c</fullName>
        <description>multi-field filter used to find Ledger Entries that are flash applicable for a given Event__c</description>
        <formula>/** multi-field filter used to find Ledger Entries that are flash applicable for a given Event__c **/
 IF( FlashApplicable__c, CASESAFEID(Event__c), &apos;&apos; )</formula>
        <label>Flash Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlashGrossPerPaid__c</fullName>
        <formula>FlashGrossRevenue__c / Event__r.PaidAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Gross Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashGrossRevenue__c</fullName>
        <label>Flash Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashNetPerPaid__c</fullName>
        <formula>FlashNetRevenue__c /  Event__r.PaidAttendance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Net Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashNetRevenue__c</fullName>
        <formula>FlashGrossRevenue__c -  ContraAtFlash__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FlashOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flash Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlashRateAmount__c</fullName>
        <label>Flash Rate Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlashRateType__c</fullName>
        <label>Flash Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForecastAmount__c</fullName>
        <formula>IF(ISPICKVAL(Event__r.Status__c, &quot;Flash Complete&quot;),
CurrentFlash__c,
IF(Event__r.StatusStage__c = &quot;Plan&quot;,
PlanAmount__c,
ProjectionAmount__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLAccountRelatedContra__c</fullName>
        <description>System field. Used only in Apex triggers.</description>
        <formula>GLAccount__r.RelatedContra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Account Related Contra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GLAccount__c</referenceTo>
        <relationshipLabel>Ledger Entries</relationshipLabel>
        <relationshipName>LedgerEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLCode__c</fullName>
        <formula>GLAccount__r.GLCode__c</formula>
        <label>GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossPerPaid__c</fullName>
        <label>Gross Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenueatSellout__c</fullName>
        <label>Gross Revenue at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HighLevelType__c</fullName>
        <label>High-Level Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>House Nut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InHouseMax__c</fullName>
        <label>In House Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseMin__c</fullName>
        <label>In House Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseProjection__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>In House Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InHouseRateType__c</fullName>
        <label>In House Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Truck</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InHouseRate__c</fullName>
        <label>In House Rate / $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InHouseatSellout__c</fullName>
        <label>In House at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringAmountRate__c</fullName>
        <label>LN Touring Amount/Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LNTouringAmount__c</fullName>
        <label>LN Touring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringMax__c</fullName>
        <label>LN Touring Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringMin__c</fullName>
        <label>LN Touring Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LNTouringRateType__c</fullName>
        <label>LN Touring Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MiscExpense__c</fullName>
        <label>Misc Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetPerPaid__c</fullName>
        <label>Net Per Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetRevenue__c</fullName>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetRevenueatSellout__c</fullName>
        <label>Net Revenue at Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonLNEVenueCoProShareAtProjection__c</fullName>
        <label>Non-LNE Venue Co-Pro Share At Projection</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.DealTypeNF__c</field>
            <operation>equals</operation>
            <value>Venue</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.EventVenueOwnershipTypeNF__c</field>
            <operation>equals</operation>
            <value>Third Party,Exclusively Booked</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferAtProjection__c</fullName>
        <label>Offer At Projection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferAtSellout__c</fullName>
        <label>Offer At Sellout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferMax__c</fullName>
        <label>Offer Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferMin__c</fullName>
        <label>Offer Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferRateType__c</fullName>
        <label>Offer Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Truck</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferRate__c</fullName>
        <label>Offer Rate / $</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalFlash__c</fullName>
        <label>Original Flash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PerDiems__c</fullName>
        <label>Per Diems</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanAmount__c</fullName>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryCoProShareAtProjection__c</fullName>
        <label>Primary Co-Pro Share At Projection</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtProjectionNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.PrimarySecondaryCoPromoterNF__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrimaryCoProShareAtSellout__c</fullName>
        <label>Primary Co-Pro Share At Sellout</label>
        <summarizedField>DealSettlementLedger__c.PrimaryCoProShareAtSelloutNF__c</summarizedField>
        <summaryFilterItems>
            <field>DealSettlementLedger__c.PrimarySecondaryCoPromoterNF__c</field>
            <operation>equals</operation>
            <value>Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>DealSettlementLedger__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectionAmount__c</fullName>
        <label>Projection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterAmountRate__c</fullName>
        <label>Promoter Amount/Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PromoterAmount__c</fullName>
        <label>Promoter Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterMax__c</fullName>
        <label>Promoter Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterMin__c</fullName>
        <label>Promoter Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PromoterRateType__c</fullName>
        <label>Promoter Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>% of Gross</fullName>
                </value>
                <value>
                    <fullName>% of Adjusted Gross</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Per Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleifnotLNE__c</fullName>
        <label>Responsible if not LNE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollUpArtistAmount__c</fullName>
        <label>Roll-Up Artist Amount</label>
        <summarizedField>LedgerEntryBreakout__c.ArtistAmount__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpCOGSAtForecast__c</fullName>
        <label>Roll-Up COGS At Forecast</label>
        <summarizedField>LedgerEntryBreakout__c.COGSatForecast__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpCOGSAtSellout__c</fullName>
        <label>Roll-Up COGS At Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.COGSAtSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpContraAtFlash__c</fullName>
        <label>Roll-Up Contra at Flash</label>
        <summarizedField>LedgerEntryBreakout__c.ContraAtFlash__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpContraAtForecast__c</fullName>
        <label>Roll-Up Contra At Forecast</label>
        <summarizedField>LedgerEntryBreakout__c.ContraAtForecast__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpContraAtSellout__c</fullName>
        <label>Roll-Up Contra At Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.ContraatSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpCountSettlement__c</fullName>
        <description>Unfiltered count of Breakouts include Breakouts created in Settlement that don&apos;t apply to Booking.</description>
        <label>Roll-Up Count - Settlement</label>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpCount__c</fullName>
        <label>Roll-Up Count</label>
        <summaryFilterItems>
            <field>LedgerEntryBreakout__c.SettlementOnly__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpCurrentFlash__c</fullName>
        <label>Roll-Up Current Flash</label>
        <summarizedField>LedgerEntryBreakout__c.CurrentFlash__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpDealSettlementLedgerCount__c</fullName>
        <label>Roll Up Deal Settlement Ledger Count</label>
        <summaryForeignKey>DealSettlementLedger__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpExpenseAdjustmentAtSellout__c</fullName>
        <label>Roll-Up Expense Adjustment at Sellout</label>
        <summarizedField>LedgerEntryBreakout__c.ExpenseAdjustmentatSellout__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpExpenseAdjustment__c</fullName>
        <label>Roll-Up Expense Adjustment</label>
        <summarizedField>LedgerEntryBreakout__c.ExpenseAdjustment__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpGrossPerPaid__c</fullName>
        <label>Roll-Up Gross Per Paid</label>
        <summarizedField>LedgerEntryBreakout__c.GrossPerPaid__c</summarizedField>
        <summaryForeignKey>LedgerEntryBreakout__c.LedgerEntry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>